# aoc24

./: Cargo.toml
src/1/: main.rs
src/2/: main.rs
src/3/: main.rs
src/4/: main.rs
src/5/: main.rs
